Added mail details to dtos